separate some components; failed to try dotenv; added optional Google Recaptcha function

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,9 @@
+# get from Mailjet
 export MJ_APIKEY_PUBLIC=abcdefghi
 export MJ_APIKEY_PRIVATE=12345678
+# where to send the email
 export TO_EMAIL=send.to@gmail.com
+# validated email to send from (must be Mailjet-verified)
 export FROM_EMAIL=valid@email.com
+# get from Google ReCaptcha (optionally)
+# export RECAPTCHA_SECRET=optional
